--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
       "email": "gonzalo123@gmail.com"
     }
   ],
-  "minimum-stability": "stable",
+  "minimum-stability": "dev",
   "require": {
     "predis/predis": "^1.1"
   },
